# thesis-code

./: README.md  pyproject.toml
tests/: test_csst.py  test_sti.py
thesis/: const.py  forward.py  phantom.py  vis.py
thesis/models/: csst.py  scalar.py
